Config  file Added

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 </head>
 <body>
     <h1 class="body">Body</h1>
+    <!-- External Files -->
+    <script src="./config.ts"></script>
 </body>
 </html>
