--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-    <h1 class="body">Body</h1>
+    <h1 class="body">Project-1</h1>
+    <h2>Wheather,News and Sports</h2>
+    <p>This Website is build Using HTML , CSS and TypeScript
+        <br>
+        Responsive Website using Grid
+    </p>
     <!-- External Files -->
     <script src="./config.ts"></script>
 </body>
